<resources>
    <string name="app_name">웰컴퍼니</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="menu_myinfo">내 정보 수정</string>
    <string name="menu_logout">로그아웃</string>
    <string name="menu_mylist">내 글 보기</string>
    <string name="menu_admin">관리자 메뉴</string>
    <string name="menu_bookmark">즐겨찾기</string>
    <string name="menu_myapply">나의 신청 내역</string>

    <string name="menu_company">회사 신청 목록</string>
    <string name="menu_reserve">견학 예약 목록</string>




  <!--카테고리 리스트-->
    <string name="big_category_prompt">대분류</string>
    <string name="small_category_prompt">소분류</string>

    <string-array name="big_category_arrays">
        <item>전체보기</item>
        <item>서비스·교육·금융·유통</item>
        <item>미디어·광고·문화·예술</item>
        <item>IT·정보통신</item>
        <item>제조·통신·화학·건설</item>

    </string-array>

    <string-array name="small_category_arrays_1">
        <item>전체보기</item>
        <item>공기업·공공기관·협회</item>
        <item>은행·보험·증권·카드</item>
        <item>캐피탈·대출</item>
        <item>컨설팅·연구·조사</item>
        <item>의료·보건·복지</item>
        <item>교육·유학·학원</item>
        <item>학습지·방문교육</item>
        <item>호텔·여행·항공</item>
        <item>스포츠·여가·휘트니스</item>
        <item>음식료·외식·프랜차이즈</item>
        <item>백화점·유통·도소매</item>
        <item>무역·상사</item>
        <item>물류·운송·배송</item>
        <item>콜센터·시설관리·아웃소싱·기타</item>
        <item>회계·세무·법무</item>
        <item>부동산·중개·임대</item>
        <item>정비·A/S</item>
        <item>렌탈·임대·리스</item>
        <item>서치펌·헤드헌팅</item>
        <item>결혼·예식장·상조</item>
    </string-array>


    <string-array name="small_category_arrays_2">
        <item>전체보기</item>
        <item>방송·영상·프로덕션</item>
        <item>신문·잡지·인쇄·출판</item>
        <item>광고·홍보·전시</item>
        <item>영화·음반·배급</item>
        <item>연예·엔터테인먼트</item>
        <item>문화·공연·예술</item>
        <item>디자인·CAD</item>
    </string-array>


    <string-array name="small_category_arrays_3">
        <item>전체보기</item>
        <item>SI·SM·CRM·ERP</item>
        <item>웹에이전시</item>
        <item>소프트웨어·솔루션·ASP</item>
        <item>쇼핑몰·오픈마켓·소셜커머스</item>
        <item>포털·컨텐츠·커뮤니티</item>
        <item>네트워크·통신서비스</item>
        <item>정보보안</item>
        <item>게임·애니메이션</item>
        <item>모바일·무선</item>
        <item>IT컨설팅</item>

    </string-array>

    <string-array name="number">
        <item>010</item>
        <item>011</item>
        <item>016</item>
        <item>017</item>
        <item>018</item>
        <item>019</item>
        <item>02</item>
        <item>031</item>
        <item>032</item>
        <item>033</item>
        <item>041</item>
        <item>042</item>
        <item>043</item>
        <item>044</item>
        <item>051</item>
        <item>052</item>
        <item>053</item>
        <item>054</item>
        <item>055</item>
        <item>061</item>
        <item>062</item>
        <item>063</item>
        <item>064</item>
        <item>0502</item>
        <item>0503</item>
        <item>0504</item>
        <item>0505</item>
        <item>070</item>
        <item>080</item>
    </string-array>


    <string-array name="small_category_arrays_4">
        <item>전체보기</item>
       <item>전기·전자·제어</item>
       <item>반도체·디스플레이·광학</item>
       <item>컴퓨터·하드웨어·장비</item>
       <item>기계·기계설비</item>
       <item>자동차·조선·철강·항공</item>
       <item>금속·재료·자재</item>
       <item>건축·설비·인테리어</item>
       <item>건설·시공·토목·조경</item>
       <item>화학·에너지·환경</item>
       <item>섬유·의류·패션</item>
       <item>의료·제약·바이오</item>
       <item>생활화학·화장품</item>
       <item>생활용품·소비재·기타</item>
       <item>목재·제지·가구</item>
        <item>식품가공·농축산·어업</item>
    </string-array>
    <string name="title_activity_company">CompanyActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="title_activity_report_write">ReportWriteActivity</string>
    <string name="title_activity_reserve">ReserveActivity</string>
    <string name="title_activity_join_select">JoinSelectActivity</string>
    <string name="title_activity_join_company">JoinCompanyActivity</string>
    <string name="title_activity_findpw" />

</resources>
