<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/slide_background"
    android:orientation="vertical">


    <com.chocoroll.ourcompay.Model.BTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="안녕하세요 유저님~"
        android:id="@+id/menu_hi"
        android:padding="10dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/slide_line"></LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:id="@+id/menu_myinfo">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/left_menu" />


        <com.chocoroll.ourcompay.Model.BTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="17dp"
            android:text="@string/menu_myinfo"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:typeface="sans" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/slide_line"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:id="@+id/menu_logout">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/logout" />


        <com.chocoroll.ourcompay.Model.BTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="17dp"
            android:text="@string/menu_logout"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:typeface="sans" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/slide_line"></LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:id="@+id/menu_company">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/left_menu" />


        <com.chocoroll.ourcompay.Model.BTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="17dp"
            android:text="@string/menu_company"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/slide_line"></LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:id="@+id/menu_mylist">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/report" />


        <com.chocoroll.ourcompay.Model.BTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="17dp"
            android:text="@string/menu_mylist"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:typeface="sans" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/slide_line"></LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:id="@+id/menu_bookmark">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/bookmarklist" />


        <com.chocoroll.ourcompay.Model.BTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="17dp"
            android:text="@string/menu_bookmark"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:typeface="sans" />

    </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listViewBookmark" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/slide_line"></LinearLayout>




</LinearLayout>